--- a/style.css
+++ b/style.css
@@ -78,12 +78,16 @@ nav {
 .content{
     text-align: center;
     position: relative;
-   padding-top: 50px;
-   padding-bottom: 50px;
-    padding-left: 50px; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
     min-height: 60vh;
     width: 100%;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .content h1 {
     
@@ -532,6 +536,29 @@ nav {
   }
   .booking-header h2 {
     font-size: 26px;
+  }
+
+  /* Index page hero section - mobile center fix */
+  .content {
+    padding-left: 15px;
+    padding-right: 15px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .content h1 {
+    text-align: center;
+    width: 100%;
+  }
+
+  .content p {
+    text-align: center;
+    width: 100%;
+  }
+
+  .content button {
+    align-self: center;
   }
 }
 
